--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,2 +1,4 @@
 <h1><%= @product.name %></h1>
-<p><%= @product.description %>
+<p><%= @product.description %></p>
+
+<b><%= @product.price %> zł</b>
