--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,7 +30,32 @@
     </div>
 
     <div class="container-fluid">
-    	<%= yield %>
+      <div class="row-fluid">
+        <div class="span3">
+          <div class="well sidebar-nav">
+            <ul class="nav nav-list">
+              <li class="nav-header">Kategorie</li>
+              <% @categories.each do |category| %>
+                <li><%= link_to "#{category.name}", category %></li>
+              <% end %>
+            </ul>
+          </div>
+
+          <div class="well sidebar-nav">
+            <ul class="nav nav-list">
+              <li class="nav-header">Koszyk</li>
+              <% @cart_elements.each do |category| %>
+                <li><%= link_to "#{category.name}", category %></li>
+              <% end %>
+            </ul>
+          </div>
+
+        </div>
+        <div class="span9">
+          <%= yield %>
+        </div>
+      </div>
+    	
     </div>
 </body>
 </html>
