--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,4 +1,9 @@
 <h1><%= @product.name %></h1>
 <p><%= @product.description %></p>
 
-<b><%= @product.price %> zł</b>
+<b><%= @product.price %> zł</b> <p><%= @test %></p>
+
+<%= form_tag(cart_products_path) do |f| %>
+	<%= hidden_field_tag(:product_id, params[:id]) %>
+	<%= submit_tag("Dodaj do koszyka") %>
+<% end %>
