--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,8 +9,7 @@
       }
   </style>  
   <%= stylesheet_link_tag    "bootstrap-responsive.min", :media => "all" %>
-  <%= javascript_include_tag "jquery-1.8.2.min" %>
-  <%= javascript_include_tag "bootstrap.min" %>
+  <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -44,9 +43,17 @@
           <div class="well sidebar-nav">
             <ul class="nav nav-list">
               <li class="nav-header">Koszyk</li>
-              <% @cart_elements.each do |category| %>
-                <li><%= link_to "#{category.name}", category %></li>
+              <% @cart_elements.each do |el| %>
+                <p>
+                  <%= link_to cart_product_path(el.id), method: :delete do %>
+                    <i class="icon-remove icon-white"></i>
+                  <% end %>
+                  <%= link_to "#{el.name}", el %>
+                </p>
               <% end %>
+              <% if @cart_elements.empty? %>
+                <p>Brak produktów w koszyku</p>
+              <% end %>              
             </ul>
           </div>
 
