Finish admin functionality

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,9 +37,9 @@
                 <li class="nav-header">Administracja</li>
                 <li><%= link_to "Lista zamówień", admin_root_path %></li>
                 <li><%= link_to "Lista kategorii", admin_categories_path %></li>
-                <li><%= link_to "Lista produktów", admin_root_path %></li>
+                <li><%= link_to "Lista produktów", admin_products_path %></li>
                 <li><%= link_to "Dodaj kategorię", new_admin_category_path %></li>
-                <li><%= link_to "Dodaj produkt", admin_root_path %></li>
+                <li><%= link_to "Dodaj produkt", new_admin_product_path %></li>
                 
               </ul>
             </div>
